[package]
name = "aioworldline"
version = "0.5.5"
edition = "2024"
rust-version = "1.95"
description = "Unofficial Worldline portal data retrieving client"
authors = ["Oleg Korsak <kamikaze.is.waiting.you@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/kamikaze/aioworldline"
keywords = ["worldline", "payments", "transactions"]
categories = ["finance"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
envy = "0.4.2"
pyo3 = { version = "0.28.3", features = ["extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"], optional = true }
reqwest = { version = "0.13.2", features = ["cookies", "form", "gzip", "rustls", "query"] }
scraper = "0.26.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lib]
name = "aioworldline"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "dep:pyo3-async-runtimes"]


