[build-system]
requires = ["maturin"]
build-backend = "maturin"

[project]
name = "aioworldline"
dynamic = ["version"]
description = "Unofficial Worldline portal data retrieving client"
authors = [
    { name = "Oleg Korsak", email = "kamikaze.is.waiting.you@gmail.com" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.13.9,<3.15.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
]
keywords = ["finances", "worldline", "api"]

[project.urls]
Homepage = "https://github.com/kamikaze/aioworldline"
Repository = "https://github.com/kamikaze/aioworldline"
Documentation = "https://github.com/kamikaze/aioworldline/blob/main/README.md"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "aioworldline"

[tool.pyright]
stubPath = "."

